Deal with spartanizations