@@ -11,7 +11,7 @@ public class ChainStringToIntegerMap {
   }
 
   public boolean containsValue(final int value) {
-    return inner.containsValue(new Integer(value));
+    return inner.containsValue(Integer.valueOf(value));
   }
 
   public Set<Entry<String, Integer>> entrySet() {
@@ -32,7 +32,7 @@ public class ChainStringToIntegerMap {
 
   public ChainStringToIntegerMap put(final String key, final int value) {
     assert !inner.containsKey(key);
-    inner.put(key, new Integer(value));
+    inner.put(key, Integer.valueOf(value));
     return this;
   }
 
